--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
